# QuranApp-Windows

./: .gitignore  CMakeLists.txt  README.md
database/: Chapters.txt  quran.db
src/: curl_parser.cpp  curl_parser.hpp  db_reader.cpp  db_reader.hpp  icon.rc  main.cpp  winDark.cpp  winDark.hpp  window.cpp  window.hpp
src/json/: LICENSE.MIT  README.md
